[package]
name = "egui-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.12"
cpal = "0.15.2"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8.15"
eframe = "0.21.3"
env_logger = "0.10"
groove-core = { path = "/home/miket/src/groove/core", features = [
    "serialization"
] }
groove-entities = { path = "/home/miket/src/groove/entities", features = [
    "serialization"
] }
groove-macros = { path = "/home/miket/src/groove/macros" }
groove-proc-macros = { path = "/home/miket/src/groove/proc-macros" }
groove-orchestration = { path = "/home/miket/src/groove/orchestration" }
groove-settings = { path = "/home/miket/src/groove/settings" }
groove-toys = { path = "/home/miket/src/groove/toys", features = [
    "serialization"
] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = "0.8"
strum = "0.24.1"
strum_macros = "0.24.2"

[features]
default = ["serialization"]
"serialization" = [
    "serde",
    "groove-core/serialization",
    "groove-entities/serialization"
]
